--- a/components/Header.module.css
+++ b/components/Header.module.css
@@ -2,8 +2,16 @@
     color: white;
     background-color: black;
     padding: 10px;
+    display: flex;
+    justify-content: space-between;
+}
+
+.rightSide {
+    display: flex;
+    justify-content: flex-end;
 }
 
 .title {
     font-size: 40px;
 }
+
